added delete track endpoint
